# gooby

./: Cargo.toml  README.md
locales/: EN.toml  TR.toml
src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  types.rs
src/commands/: ban.rs  clear.rs  help.rs  kick.rs  util.rs
